syntax = "proto3";

package spin;

option go_package = "internal/pb;pb";

service SpinService {
  rpc Spin (SpinRequest) returns (SpinResponse);
}

message SpinRequest {
  int64 duration_ms = 1;
}

message SpinResponse {
  string message = 1;
}
